--- a/test.html
+++ b/test.html
@@ -19,11 +19,12 @@
 
         // Check for 'l' parameter and load that URL if present
         const params = new URLSearchParams(window.location.search);
-        const loadUrl = params.get('l');
+        const loadUrl = window.location.hash.slice(1);
+        console.log(loadUrl)
 
         if (loadUrl) { // load current page
             tkml.rootUrl = 'http://localhost:8084/index.tkml'
-            tkml.load(decodeURIComponent(loadUrl));
+            tkml.load(loadUrl);
         } else {
             tkml.load("http://localhost:8084/index.tkml");
         }
