--- a/test.html
+++ b/test.html
@@ -7,19 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/styles.min.css">
     <script src="dist/tkml.min.js"></script>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-        }
-
-        #container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-    </style>
 </head>
 
 <body>
@@ -28,18 +15,17 @@
 
         const container = document.getElementById('container');
         const tkml = new TKML(container, { dark: true });
-
-        if (!tkml.fromUrl()) {
-            tkml.fromText(`
-                <title center>TKML Dev Test</title>
-                <br/>
-                <list>
-                    <section href="http://localhost:8348/">Test Component</section>
-                </list>
-                <br/>
-                <msg type="info">Changes should be reflected automatically when you modify the source code.</msg>
-            `);
-        }
+        tkml.addPage('/', `
+            <title center>TKML Dev Test</title>
+            <br/>
+            <list>
+                <section href="http://localhost:8348/"><b>[localhost:8348]</b> testing playground</section>
+                <section href="http://localhost:8084/"><b>[localhost:8084]</b> testing playground</section>
+            </list>
+            <br/>
+            <msg type="info">Changes should be reflected automatically when you modify the source code.</msg>
+        `)
+        tkml.route()
     </script>
 </body>
 
